--- a/compose.yaml
+++ b/compose.yaml
@@ -19,6 +19,7 @@ services:
     volumes:
       - ./:/var/www/html
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - laravel_storage:/var/www/html/storage
     depends_on:
       - app
     networks:
@@ -41,3 +42,4 @@ networks:
     driver: bridge
 volumes:
   pgdata:
+  laravel_storage:
